--- a/SwiftBreakout/Base.lproj/Main.storyboard
+++ b/SwiftBreakout/Base.lproj/Main.storyboard
@@ -13,14 +13,14 @@
                         <viewControllerLayoutGuide type="bottom" id="2fi-mo-0CV"/>
                     </layoutGuides>
                     <view key="view" contentMode="scaleToFill" id="kh9-bI-dsS">
-                        <rect key="frame" x="0.0" y="0.0" width="320" height="480"/>
+                        <rect key="frame" x="0.0" y="0.0" width="480" height="480"/>
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                         <subviews>
-                            <view contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="H7c-wU-AE8" customClass="SKView">
-                                <rect key="frame" x="20" y="20" width="280" height="348"/>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="H7c-wU-AE8" customClass="SKView">
+                                <rect key="frame" x="20" y="20" width="440" height="348"/>
                                 <subviews>
-                                    <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="TUm-EM-ThS">
-                                        <rect key="frame" x="65" y="136" width="150" height="76"/>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="TUm-EM-ThS">
+                                        <rect key="frame" x="145" y="136" width="150" height="76"/>
                                         <fontDescription key="fontDescription" name="Noteworthy-Bold" family="Noteworthy" pointSize="40"/>
                                         <state key="normal" title="CLEAR!">
                                             <color key="titleColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
@@ -29,8 +29,8 @@
                                             <action selector="restart:" destination="vXZ-lx-hvc" eventType="touchUpInside" id="j69-gL-g12"/>
                                         </connections>
                                     </button>
-                                    <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="lj6-tH-IWs">
-                                        <rect key="frame" x="18" y="136" width="245" height="76"/>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="lj6-tH-IWs">
+                                        <rect key="frame" x="97.5" y="136" width="245" height="76"/>
                                         <fontDescription key="fontDescription" name="Noteworthy-Bold" family="Noteworthy" pointSize="40"/>
                                         <state key="normal" title="GAME OVER">
                                             <color key="titleColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
@@ -41,24 +41,46 @@
                                     </button>
                                 </subviews>
                                 <color key="backgroundColor" red="0.0" green="1" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                                <constraints>
+                                    <constraint firstAttribute="centerX" secondItem="TUm-EM-ThS" secondAttribute="centerX" id="ex7-Rg-ZTW"/>
+                                    <constraint firstAttribute="centerX" secondItem="lj6-tH-IWs" secondAttribute="centerX" id="h48-R3-u67"/>
+                                    <constraint firstAttribute="centerY" secondItem="lj6-tH-IWs" secondAttribute="centerY" id="sdg-U1-tsU"/>
+                                    <constraint firstAttribute="centerY" secondItem="TUm-EM-ThS" secondAttribute="centerY" id="vu1-t3-kvg"/>
+                                </constraints>
                             </view>
-                            <slider opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" value="0.5" minValue="0.0" maxValue="1" translatesAutoresizingMaskIntoConstraints="NO" id="r2E-Zh-AhH">
-                                <rect key="frame" x="18" y="414" width="284" height="31"/>
+                            <slider opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" value="0.5" minValue="0.0" maxValue="1" translatesAutoresizingMaskIntoConstraints="NO" id="r2E-Zh-AhH">
+                                <rect key="frame" x="18" y="414" width="444" height="31"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="30" id="YTa-HX-juQ"/>
+                                </constraints>
                                 <connections>
                                     <action selector="padSliderMoved:" destination="vXZ-lx-hvc" eventType="valueChanged" id="h25-t4-O55"/>
                                 </connections>
                             </slider>
-                            <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Label" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ukj-Fu-FyU">
+                            <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ukj-Fu-FyU">
                                 <rect key="frame" x="20" y="376" width="42" height="20.5"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="20.5" id="DEi-7n-2CJ"/>
+                                </constraints>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstAttribute="trailing" secondItem="H7c-wU-AE8" secondAttribute="trailing" constant="20" id="DzS-Ud-GWX"/>
+                            <constraint firstAttribute="trailing" secondItem="r2E-Zh-AhH" secondAttribute="trailing" constant="20" id="K7u-w6-IKM"/>
+                            <constraint firstItem="ukj-Fu-FyU" firstAttribute="top" secondItem="H7c-wU-AE8" secondAttribute="bottom" constant="8" id="VsZ-Vx-Kjh"/>
+                            <constraint firstItem="ukj-Fu-FyU" firstAttribute="leading" secondItem="kh9-bI-dsS" secondAttribute="leading" constant="20" id="aRQ-qs-fmz"/>
+                            <constraint firstItem="r2E-Zh-AhH" firstAttribute="top" secondItem="ukj-Fu-FyU" secondAttribute="bottom" constant="17.5" id="acY-Yl-97N"/>
+                            <constraint firstItem="H7c-wU-AE8" firstAttribute="leading" secondItem="kh9-bI-dsS" secondAttribute="leading" constant="20" id="cbj-xh-BX9"/>
+                            <constraint firstItem="r2E-Zh-AhH" firstAttribute="leading" secondItem="kh9-bI-dsS" secondAttribute="leading" constant="20" id="eeh-Tt-g2O"/>
+                            <constraint firstItem="2fi-mo-0CV" firstAttribute="top" secondItem="r2E-Zh-AhH" secondAttribute="bottom" constant="36" id="fhO-xI-TPi"/>
+                            <constraint firstItem="H7c-wU-AE8" firstAttribute="top" secondItem="jyV-Pf-zRb" secondAttribute="bottom" id="kjj-Om-hRn"/>
+                        </constraints>
+                        <simulatedOrientationMetrics key="simulatedOrientationMetrics" orientation="landscapeRight"/>
                     </view>
-                    <simulatedOrientationMetrics key="simulatedOrientationMetrics"/>
-                    <simulatedScreenMetrics key="simulatedDestinationMetrics"/>
                     <connections>
                         <outlet property="gameClearButton" destination="TUm-EM-ThS" id="ujx-o7-Cy7"/>
                         <outlet property="gameOverButton" destination="lj6-tH-IWs" id="Zcg-vH-awN"/>
@@ -69,7 +91,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="x5A-6p-PRh" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="192" y="164"/>
+            <point key="canvasLocation" x="357" y="163"/>
         </scene>
     </scenes>
 </document>
